refactor(services): 统一使用serviceApiUrl并优化错误消息处理
- 移除各服务中重复的apiUrl函数，统一使用serviceApiUrl作为接口基础地址构造函数
- 移除各服务中重复的getBackendMessage函数，统一引入并使用serviceErrorUtils中的相关函数
- 在authService中增强注册错误消息提取逻辑，提升错误提示准确性
- 统一使用readJsonRecord和读取辅助函数处理接口响应，提升代码一致性和健壮性
- 修改DiscoverSearchPage中正则表达式，调整匹配逻辑，优化搜索关键词提取