@@ -5,7 +5,7 @@ import com.example.EnterpriseRagCommunity.dto.content.PostDraftsDTO;
 import com.example.EnterpriseRagCommunity.dto.content.PostDraftsUpdateDTO;
 import com.example.EnterpriseRagCommunity.service.content.PostDraftsService;
 import jakarta.validation.Valid;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -14,22 +14,21 @@ import org.springframework.web.bind.annotation.*;
 @RestController
 @RequestMapping("/api/post-drafts")
 @CrossOrigin(origins = {"http://localhost:5173", "http://127.0.0.1:5173"}, allowCredentials = "true")
+@RequiredArgsConstructor
 public class PostDraftsController {
-
-    @Autowired
-    private PostDraftsService postDraftsService;
+    private final PostDraftsService postDraftsService;
 
     @GetMapping
     public Page<PostDraftsDTO> listMine(
             @RequestParam(name = "page", defaultValue = "0") int page,
             @RequestParam(name = "size", defaultValue = "20") int size
     ) {
-        Pageable pageable = PageRequest.of(Math.max(page, 0), Math.min(Math.max(size, 1), 100));
+        Pageable pageable = PageRequest.of(Math.max(page, 0), Math.clamp(size, 1, 100));
         return postDraftsService.listMine(pageable);
     }
 
     @GetMapping("/{id}")
-    public PostDraftsDTO getMine(@PathVariable("id") Long id) {
+    public PostDraftsDTO getMine(@PathVariable Long id) {
         return postDraftsService.getMine(id);
     }
 
@@ -39,12 +38,12 @@ public class PostDraftsController {
     }
 
     @PutMapping("/{id}")
-    public PostDraftsDTO updateMine(@PathVariable("id") Long id, @Valid @RequestBody PostDraftsUpdateDTO dto) {
+    public PostDraftsDTO updateMine(@PathVariable Long id, @Valid @RequestBody PostDraftsUpdateDTO dto) {
         return postDraftsService.updateMine(id, dto);
     }
 
     @DeleteMapping("/{id}")
-    public void deleteMine(@PathVariable("id") Long id) {
+    public void deleteMine(@PathVariable Long id) {
         postDraftsService.deleteMine(id);
     }
 }
